--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
@@ -19,6 +18,8 @@
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
+    "excel": "^1.0.1",
+    "express": "^4.17.2",
     "express-handlebars": "^4.0.3",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
