--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^4.0.3",
     "express-session": "^1.17.1",
+    "finalhandler": "^1.2.0",
     "formidable": "^1.2.2",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
